tolk-tester/tests/invalid-typing/err-6722.tolk
import "../imports/./has-tinf-err"

/**
@compilation_should_fail
@stderr imports/has-tinf-err.tolk:3:18
@stderr can not assign `slice` to variable of type `int`
 */
